--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
 
 :root {
-  --color-primary: #5ec576;
+  --color-primary: #5bd1d7;
   --color-secondary: #ffcb03;
   --color-tertiary: #ff585f;
-  --color-primary-darker: #4bbb7d;
+  --color-primary-darker: #00f2ff;
   --color-secondary-darker: #ffbb00;
   --color-tertiary-darker: #fd424b;
-  --color-primary-opacity: #5ec5763a;
+  --color-primary-opacity: #5eafc53a;
   --color-secondary-opacity: #ffcd0331;
   --color-tertiary-opacity: #ff58602d;
-  --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
+  --gradient-primary: linear-gradient(to top left, #5bd1d7, #ffffff);
   --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
 }
 
@@ -28,9 +28,9 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
-  color: #444;
+  color: white;
   line-height: 1.9;
-  background-color: #f3f3f3;
+  background-color: black;
 }
 
 /* GENERAL ELEMENTS */
@@ -97,7 +97,7 @@ body {
 }
 
 p {
-  color: #666;
+  color: rgb(233, 233, 233);
 }
 
 /* This is BAD for accessibility! Don't do in the real world! */
@@ -127,11 +127,12 @@ img {
 /* nav and stickly class at the same time */
 .nav.sticky {
   position: fixed;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .nav__logo {
-  height: 4.5rem;
+  height: 10rem;
+  border-radius: 50%;
   transition: all 0.3s;
 }
 
@@ -205,6 +206,7 @@ h4 {
 
 .header__img {
   width: 100%;
+  border-radius: 25px;
   grid-column: 2 / 3;
   grid-row: 1 / span 4;
   transform: translateY(-6rem);
@@ -238,6 +240,7 @@ h4 {
 
 .features__img {
   width: 100%;
+  border-radius: 25px;
 }
 
 .features__feature {
@@ -273,8 +276,7 @@ h4 {
 .operations {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
-
-  background-color: #fff;
+  background-color: rgba(0, 238, 255, 0.305);
 }
 
 .operations__tab-container {
@@ -525,9 +527,9 @@ h4 {
 
 /* SIGNUP */
 .section--sign-up {
-  background-color: #37383d;
+  background-color: black;
   border-top: none;
-  border-bottom: 1px solid #444;
+  border-bottom: 1px solid white;
   text-align: center;
   padding: 10rem 3rem;
 }
@@ -549,7 +551,7 @@ h4 {
 /* FOOTER */
 .footer {
   padding: 10rem 3rem;
-  background-color: #37383d;
+  background-color: black;
 }
 
 .footer__nav {
@@ -570,7 +572,7 @@ h4 {
 }
 
 .footer__logo {
-  height: 5rem;
+  height: 12rem;
   display: block;
   margin: 0 auto;
   margin-bottom: 5rem;
@@ -593,9 +595,9 @@ h4 {
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 60rem;
-  background-color: #f3f3f3;
+  background-color: black;
   padding: 5rem 6rem;
-  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4rem 6rem rgba(255, 255, 255, 0.5);
   z-index: 1000;
   transition: all 0.5s;
 }
@@ -639,7 +641,7 @@ h4 {
 }
 
 .modal__form button {
-  grid-column: 1 / span 2;
+  /* grid-column: 1 / span 2; */
   justify-self: center;
   margin-top: 1rem;
 }
@@ -656,6 +658,33 @@ h4 {
   background: none;
 }
 
+.contact__logo {
+  width: 10rem;
+  justify-self: center;
+}
+
+.div--contact {
+  grid-column: 1 / span 2;
+  justify-self: center;
+  margin-top: 1rem;
+}
+
+.p--contact {
+  color: white;
+  font-size: 5rem;
+}
+
+.contact--contact {
+  display: flex;
+  flex-direction: row;
+}
+
+.img--contact {
+  width: 5rem;
+  height: 5rem;
+  align-self: center;
+}
+
 .hidden {
   visibility: hidden;
   opacity: 0;
@@ -667,8 +696,11 @@ h4 {
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
-  background-color: white;
-  color: #bbb;
+  height: auto;
+  padding: 1%;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.5);
+  color: white;
   font-size: 1.5rem;
   font-weight: 400;
 }
